<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".activities.ResetPasswordActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables,UselessParent">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_secure_note_logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/open_sans_medium"
                    android:text="@string/reset_password"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_20ssp" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/did_you_forget_your_password"
                android:textColor="@color/primary"
                android:textSize="@dimen/_21ssp" />

            <LinearLayout
                android:id="@+id/lastRememberContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/enter_your_last_password_you_remembered_you_don_t_need_to_be_100_correct"
                    android:textColor="#505050"
                    android:textSize="@dimen/_14ssp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lassRememberedEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    app:boxBackgroundColor="#E5EEFF"
                    app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_5sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_5sdp"
                    app:boxCornerRadiusTopStart="@dimen/_5sdp"
                    app:boxStrokeColor="@android:color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_remembered_password"
                        android:inputType="textPassword"
                        android:textColor="@color/primary" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/checkLastRememberedBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/check"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/rememberedPassWrongErrorTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/your_last_remembered_password_not_even_match_1_please_try_again"
                    android:textColor="#F44336"
                    android:textSize="@dimen/_15ssp"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/resetPasswordContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/hurray_you_can_reset_your_password"
                    android:textColor="@color/green"
                    android:textSize="@dimen/_15ssp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/resetPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    app:boxBackgroundColor="#E5EEFF"
                    app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_5sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_5sdp"
                    app:boxCornerRadiusTopStart="@dimen/_5sdp"
                    app:boxStrokeColor="@android:color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_new_password"
                        android:inputType="textPassword"
                        android:textColor="@color/primary" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/resetPasswordConfirmEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    app:boxBackgroundColor="#E5EEFF"
                    app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
                    app:boxCornerRadiusBottomStart="@dimen/_5sdp"
                    app:boxCornerRadiusTopEnd="@dimen/_5sdp"
                    app:boxCornerRadiusTopStart="@dimen/_5sdp"
                    app:boxStrokeColor="@android:color/transparent"
                    app:boxStrokeWidth="0dp"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_new_password"
                        android:inputType="textPassword"
                        android:textColor="@color/primary" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/resetPasswordBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:backgroundTint="@color/green"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/reset"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_14ssp" />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_60sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_stylish_rounded_circles" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>