<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddNoteActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolBarContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:background="@color/primary"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backHomeArrowBtn"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:contentDescription="@string/back_arrow"
            android:src="@drawable/ic_back_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />


        <TextView
            android:id="@+id/noteLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_5sdp"
            android:fontFamily="@font/open_sans_medium"
            android:text="@string/add_secure_note"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backHomeArrowBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/labelNoteBtn"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/label_note"
            app:layout_constraintBottom_toBottomOf="@+id/privateNoteBtn"
            app:layout_constraintEnd_toStartOf="@+id/privateNoteBtn"
            app:layout_constraintTop_toTopOf="@+id/privateNoteBtn"
            app:srcCompat="@drawable/ic_add_label" />

        <ImageView
            android:id="@+id/privateNoteBtn"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_lock_open"
            app:tint="@color/white" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBarContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/noteTitleEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:autofillHints="name"
                android:background="@android:color/transparent"
                android:fontFamily="@font/open_sans_bold"
                android:hint="@string/enter_title"
                android:inputType="textMultiLine"
                android:padding="@dimen/_10sdp"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/noteDescEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:autofillHints="name"
                android:background="@android:color/transparent"
                android:fontFamily="@font/open_sans_medium"
                android:gravity="start"
                android:hint="@string/enter_note"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_200sdp"
                android:padding="@dimen/_10sdp" />


        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/noteDoneBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:backgroundTint="#00B812"
        android:clickable="true"
        android:contentDescription="@string/add_secure_note"
        android:focusable="true"
        android:tint="@color/white"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_check" />

</androidx.constraintlayout.widget.ConstraintLayout>