<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_secure_note_logo" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/app_name"
            android:textColor="@color/primary"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/settingsBtn"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:contentDescription="@string/settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_setting"
            app:tint="@color/primary" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/ic_search_box"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_8sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingBottom="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <ImageView
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_1sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/search_icon"
                android:src="@drawable/ic_search" />

            <EditText
                android:id="@+id/searchNoteBox"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:autofillHints="name"
                android:background="@android:color/transparent"
                android:hint="@string/search_here"
                android:inputType="text"
                android:textColor="@color/primary"
                android:textColorHint="#37A2FF"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">


                <ImageView
                    android:id="@+id/filterNotesBtn"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:layout_marginEnd="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_1sdp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/filter_note"
                    android:src="@drawable/ic_filter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/primary" />

                <ImageView
                    android:id="@+id/notificationCircleIcon"
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/filter_note"
                    android:src="@drawable/ic_notification_circle"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/filterNotesBtn"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/noteRecView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addNoteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:clickable="true"
        android:contentDescription="@string/add_secure_note"
        android:focusable="true"
        android:tint="@color/white"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add" />

    <ImageView
        android:id="@+id/noteNotFoundImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_100sdp"
        android:contentDescription="@string/no_note_found"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/ic_note_empty" />

    <TextView
        android:id="@+id/noteNotFoundTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/open_sans_medium"
        android:text="@string/no_note_found"
        android:textSize="@dimen/_20ssp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/noteNotFoundImg"
        app:layout_constraintStart_toStartOf="@+id/noteNotFoundImg"
        app:layout_constraintTop_toBottomOf="@+id/noteNotFoundImg" />
</androidx.constraintlayout.widget.ConstraintLayout>