<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".activities.LoginPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_secure_note_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/app_name"
                android:textColor="@color/primary"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/open_sans_medium"
                android:text="@string/password_required"
                android:textColor="@color/primary"
                android:textSize="@dimen/_13ssp" />

            <LinearLayout
                android:id="@+id/passwordFormContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/enter_password_to_continue"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_13ssp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/_210sdp">

                    <EditText
                        android:id="@+id/passwordLoginBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:autofillHints="name"
                        android:background="@drawable/edittext_underline_bg"
                        android:hint="@string/enter_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:singleLine="true"
                        android:textColorHint="@color/primary"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintEnd_toStartOf="@+id/showPasswordLoginBtn"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/showPasswordLoginBtn"
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:contentDescription="@string/app_name"
                        app:layout_constraintBottom_toBottomOf="@+id/passwordLoginBox"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/passwordLoginBox"
                        app:srcCompat="@drawable/ic_eye_close"
                        app:tint="@color/primary" />

                    <Button
                        android:id="@+id/loginDoneBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/done"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/passwordLoginBox" />

                    <TextView
                        android:id="@+id/forgotPasswordBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/forgot_password"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/_13ssp"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/loginDoneBtn" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_stylish_rounded_circles" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>